--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
-<body>
+<body style= 'background-color:lightslategray;'>
 
   <div class="container">
     <div class="row">
@@ -17,7 +18,6 @@
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
-    </div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
@@ -39,6 +39,8 @@
         <div id="gauge"></div>
       </div>
     </div>
+    <td bgcolor="#FFFFFF" style="line-height:10px;" colspan=3>&nbsp;</td>
+
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
